# Vimsual-Studio

./: ._README.md  ._setup.sh  Dockerfile  LICENSE  README.md  setup.sh
doc/md/: package.md  terminal.md  vim.md
doc/md/program/: assembly.md  c_cpp.md  csharp.md  markdown.md  python.md  verilog.md  vim.md  webpage.md
doc/md/system/: apt.md  brew.md  pip.md  yarn.md
doc/md/terminal/: iterm.md  tmux.md  zsh.md
res/config/Leaderf/: monokai.vim
res/config/aria2/: aria2.conf
res/config/asynctask/: tasks.ini
res/config/brew/: Brewfile  Brewfile.lock.json
res/config/brew/linux/: Brewfile  Brewfile.lock.json
res/config/brew/macOS/: ._Brewfile  Brewfile  Brewfile (1)  Brewfile.lock.json
res/config/cmake/: CMakeLists.txt
res/config/coc/: coc-settings.json
res/config/gdb/: ._.gdbinit  gdb-entitlement.xml
res/config/git/: .gitconfig  MisakiGithubToken.txt
res/config/gitlab/: .gitlab-ci.yml
res/config/gulp/: gulpfile.js
res/config/pip/: requirements.txt
res/config/stylelint/: .stylelintrc
res/config/vim/: .vimrc
res/config/vim/freebsd/: .vimrc
res/config/vim/macOS/: basic.vim  delux.vim  theme.vim
res/config/vimspector/: .vimspector.json  lldb-vscode.json
res/config/windows_terminal/: profiles.json
res/config/wsltty/: .minttyrc
res/config/yarn/: package.json
res/config/ycm/global/: .ycm_extra_conf.py
res/config/ycm/local/: .ycm_extra_conf.py
res/config/zsh/PD/: .zshrc
res/config/zsh/WSL/: .zshrc
res/config/zsh/freebsd/: .zshrc
res/config/zsh/linux/: .zshrc
src/: brew.sh  env.sh  pip.sh  setup.sh  symlink.sh  yarn.sh
(+1 files in other folders)
